--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://Fredreic1849.github.io/zero-academic-page-yuming/'
+baseURL = 'https://Fredreic1849.github.io/yumingli/'
 
 # multi-language support
 defaultContentLanguage = 'en'
